--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,17 @@
     <color name="graph_fill_start">#664CAF50</color>
     <color name="graph_fill_end">#004CAF50</color>
     <color name="graph_line">#FF4CAF50</color>
+    
+    <color name="primary_bg">#0A0F14</color>
+    <color name="glass_primary">#1AFFFFFF</color>
+    <color name="glass_secondary">#0F000000</color>
+    <color name="glass_border">#4FFF0000</color>
+    <color name="accent_red_primary">#E50914</color>
+    <color name="accent_red_secondary">#CC0A1A</color>
+    <color name="neon_green_accent">#39FF14</color>
+    <color name="text_primary_new">#E8E8E8</color>
+    <color name="text_secondary_new">#9CA3AF</color>
+    <color name="toggle_inactive_bg">#1F1F1F</color>
+    <color name="bottom_nav_bg">#0D1117</color>
+    <color name="bottom_nav_icon_inactive">#6B7280</color>
 </resources>
